# Shimmy-DS

./: .gitignore  .mailmap  ADVANCED_RUST_FEATURES.md  API.md  BUILD_OPTIMIZATION_SUMMARY.md  CARD_8_RDS_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_GUIDE.md  CLEAN_REPOSITORY_CHECKLIST.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUDA_SETUP_COMPLETE.md  Cargo-size-optimized.toml  Cargo.toml  DCO.md  DEPLOYMENT.md  DEVELOPER_STORY.md  DISTRIBUTION_STRATEGY.md  Dockerfile  FUNCTION_REFERENCE.md  GPU_SETUP.md  LICENSE  LONGWRITER_INTEGRATION.md  MAC-SAFETENSORS-TEST-RESULTS.md  MAC-TESTING-INSTRUCTIONS.md  POPULAR_MODELS_TESTING_PLAN.md  PRODUCTION_LAUNCH_SUMMARY.md  PRODUCTION_READINESS_ASSESSMENT.md  README-DOCKER.md  README.md  RECURSIVE_NARRATIVE_COMPARISON.md  ROADMAP.md  RUSTCHAIN_FIXES_RESPONSE.md  SECURITY.md  SECURITY_ANALYSIS.md  SECURITY_HARDENING_PLAN.md  SHIMMY_DEPLOYMENT_STRATEGY.md  SHIMMY_DS_IMPLEMENTATION.md  (+27 more)
.cargo/: config.toml
.claude/: README.md  claudecache.py  clrecall.py  integration_tracker.py  settings.local.json
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.yml  config.yml  documentation.yml  enhancement.yml  enterprise.yml  feature_request.yml  performance.yml  question.yml  security.yml
.github/workflows/: build-llama-libs.yml  ci.yml  dco-check.yml  experimental-macos-arm64-llama.yml  issue-dedup.yml  release.yml  showcase-testing.yml  test-macos-arm64.yml  update-changelog.yml  welcome-contributor.yml
benches/: generation_performance.rs  model_loading.rs  narrative_intelligence_performance.rs  performance_verification.rs  shimmy_benchmarks.rs
coverage/: tarpaulin-report.json
deploy/: Dockerfile  README.md  docker-compose.yml  fly.toml  nginx.conf  railway.toml  render.yaml
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  CONFIGURATION.md  CROSS_COMPILATION.md  EXAMPLES.md  FEATURES.md  INTEGRATION.md  MAC_TESTING_REPORT.md  METHODOLOGY.md  METRICS.md  MICHA_TOOL_REGISTRY_ARCHITECTURE.md  NARRATIVE_INTELLIGENCE.md  OPENAI_COMPAT.md  PERFORMANCE.md  SHIMMY_VS_SHIMMY_DS.md  benchmarks.md  integrations.md  playground.html  ppt-invariant-testing.md  quickstart.md  rustchain-provider.md
docs/mission-stacks/: MISSION_INDEX.json
docs/mission-stacks/archive/: mission_hot_model_swapping.yaml  mission_model_auto_discovery.yaml  mission_tool_calling_framework.yaml
docs/mission-stacks/current/: PRODUCTION_READINESS_MISSIONS.md
docs/mission-stacks/done/: GATE_2_COMPLETION_SUMMARY.md  GATE_3_COMPLETION_SUMMARY.md
docs/mission-stacks/hopper/: mission_openai_api_compatibility.yaml
docs/mission-stacks/production-ready/: SHIMMY_PRODUCTION_MASTER_PLAN.md
examples/: api_usage.py  direct_usage.py  narrative_intelligence_demo.py  parameter_examples.py  quick_writing_test.py  rust_integration.rs  shimmy_writing_demo.py  simple_narrative_demo.py  test_library.rs
huggingface-space/: README.md  app.py  requirements.txt
logs/: prompt_audit.json  stability.json
missions/coverage/: api_rs_handlers.yaml  discovery_module.yaml  main_rs_runtime_paths.yaml  main_rs_test.yaml  openai_compat_paths.yaml  server_rs_test.yaml  zero_coverage_sweep.yaml
packaging/docker/: Dockerfile
packaging/homebrew/: shimmy.rb
packaging/npm/: package.json
packaging/python/: pyproject.toml
packaging/python/src/shimmy/: __init__.py
punch-data-output/: python-analysis-report.json
scripts/: benchmark.bat  benchmark.py  benchmark.sh  configure-github-protection.sh  coverage.sh  dev-test.sh  generate-homebrew-formula.sh  install-hooks.sh  longwriter_bridge.py  longwriter_integration.py  punch-analyze.sh  rip_bridge.py  run-regression-tests.sh  setup-branch-protection.sh  update-changelog.sh  verify-ppt-coverage.sh
shimmy-vscode/: .vscodeignore  README.md  package-lock.json  package.json  shimmy-vscode-0.1.0.vsix  tsconfig.json
shimmy-vscode/src/: extension.ts
src/: advanced_features.rs  api.rs  api_errors.rs  auto_discovery.rs  auto_discovery_fixed.rs  builders.rs  character_consistency.rs  cli.rs  constraint_space.rs  discovery.rs  emotion_resonance.rs  error.rs  invariant_ppt.rs  lib.rs  macros.rs  main.rs  main_integration.rs  metrics.rs  model_manager.rs  model_registry.rs  multi_level_recursion.rs  narrative_dna.rs  obligation_pressure.rs  openai_compat.rs  port_manager.rs  prompt_audit.rs  prompt_injector.rs  reader_engagement_loops.rs  recursive_drift_stabilizer.rs  recursive_integrity_core.rs  recursive_narrative_assistant.rs  recursive_system_usage_example.rs  rustchain_compat.rs  safetensors_adapter.rs  server.rs  shimmy_config.rs  stability_log.rs  stability_tracing.rs  streaming.rs  templates.rs  (+4 more)
src/adaptive/: adapt_iq.rs  entropy_helpers.rs  mod.rs  qualitier.rs
src/cache/: cachemind.rs  lru.rs  mod.rs  model_cache.rs
src/dreamspiral/: drift_detector.py  emotional_arc_tracker.py  foreshadowing_detector.py  inquiry_bank.py  recursive_expander.py  recursive_growth_pass.py
src/engine/: adapter.rs  huggingface.rs  llama.rs  llama_fix.patch  mod.rs  safetensors_native.rs  universal.rs
src/obligations/: mod.rs  obli_select.rs
src/profile/: mod.rs  profile_mesh.rs
src/scripts/: rip_bridge.py
src/telemetry/: mod.rs  pulse_trace.rs
src/tests/: mod.rs  ppt_contracts.rs  recursive_integration_tests.rs  ric_integration_tests.rs  rip_ric_integration_tests.rs  test_adaptiq_integration.rs  test_cachemind_integration.rs  test_elegance_modules.py  test_obli_select_integration.rs  test_profile_mesh_integration.rs  test_pulse_trace_integration.rs  test_qualitier_integration.rs  test_rip_bridge.py
src/util/: diag.rs
test-huggingface-model/: config.json  tokenizer.json
test-safetensors-model/: config.json  tokenizer.json
tests/: integration_tests.rs  production_integration_tests.rs  regression_tests.rs  safetensors_integration.rs  workflow_tests.rs
tools/registry/: deploy_registry.py  generate_context.py  micha-tools-registry.json  scan_tools.py
vscode-extension/: README.md  package.json  tsconfig.json
vscode-extension/src/: extension.ts
(+1 files in other folders)
