[package]
name = "shimmy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "5MB Ollama alternative with dynamic port management and zero-friction LoRA serving. 95%+ test coverage, <100ms startup."
homepage = "https://github.com/Michael-A-Kuykendall/shimmy"
repository = "https://github.com/Michael-A-Kuykendall/shimmy"
readme = "README.md"
keywords = ["llm", "local-ai", "inference", "gguf", "lora"]
categories = ["command-line-utilities", "web-programming::http-server", "science", "development-tools"]
authors = ["Michael A. Kuykendall <michaelallenkuykendall@gmail.com>"]
exclude = [
    "docs-internal/*",
    "test-models/*",
    "target/*",
    ".*",
    "*.sh",
    "*.ps1",
    "*.py"
]

[features]
default = ["huggingface"]
# Engine backends  
llama = ["dep:llama-cpp-2"]
huggingface = [] # Python integration, no additional Rust deps
# Convenience feature sets
fast = ["huggingface"] # Fast compilation - no C++ deps
full = ["huggingface", "llama"] # Full compilation - includes C++ deps

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["http1","json","ws"] }
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
lazy_static = "1.5"
minijinja = { version = "2", features = ["loader"] }
parking_lot = "0.12"
rand = "0.8"
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros","rt-multi-thread","signal","process"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

# llama.cpp bindings (optional)
llama-cpp-2 = { version = "0.1.118", optional = true, default-features = false }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

# Optimize build times for development
[profile.dev]
opt-level = 1
debug = true

# Faster builds for dependencies
[profile.dev.package."*"]
opt-level = 2
debug = false
